css/contact.css
html {
    /* background: transparent url("/img/portrait_1500.jpg"); */ 
    background: #F3F2EE;
    font-size: 16px;
    margin: 0;
    padding: 0;
    padding-bottom: 4vh;
  }
  
  .container {
    margin: 0 auto;
    width: 100%;
    max-width: 1500px;
    margin-top: 5vh;
    font-family: monospace;
    color: #7C7C81;
  }


/*==============================
NAVIGATION BAR
==============================*/

/*==============================
MOBILE/BURGER CSS
===============================*/

/*==============================
  MAIN CONTENT
==============================*/

  .grid-container {
    display: grid;
    grid-template-columns: 1fr 5fr 1fr;
    /* grid-auto-rows: minmax(100px, auto); */
    grid-gap: 10px;
    grid-template-areas: 
    "menu-area text-area branding-area";
  }
  
  .menu {
    grid-area: menu-area;
    writing-mode: vertical-lr;
    margin-left: 10%;
    font-size: 1.5rem;
    color: rgba(124, 124, 129, 0.5);
  }

  .menu a {
    text-decoration: none;
    color: rgba(124, 124, 129, 0.5);
    /* color: #7C7C81;
    opacity: 50%; */
  }

  #active-page {
    color: #B450B0;
    opacity: 100%;
  }

  .text {
    grid-area: text-area;
    font-size: 1.25rem;
    border-bottom: lightgray 1px solid;
    width: 70%;
  }

.title {
  background-color: white;
  opacity: 80%;
  padding-left: 1%;
  padding-top: 0.5%;
  padding-right: 1%;
  padding-bottom: 0.5%;
  margin-left: -1%;
  margin-right: -1%;
  border-radius: 7.5px;
  border: lightgray 1px solid;
}

#title-text {
  color: lightgray;
  opacity: 80%;
}

.social {
  color: #7C7C81;
}

.branding {
  grid-area: branding-area;
  display: flex;
  justify-content: space-between;
  font-size: 1.5rem;
  /* Responsive with min. size of 22px (16px * 1.375). Used to be 26px. 
  font-size: calc(1.375rem + 0.2vw); */
  writing-mode: vertical-rl;
  margin-right: 10%;
}

.branding img {
  height: auto;
  width: 25%;
}

.gradient-text {
  background-image: linear-gradient(0deg, fuchsia, #180ACE);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

/* change name of class to responsive/mobile-header */
.responsive-menu {
  display: none;
}

.scrambled-menu:hover .original { 
  display: none; 
}

.scrambled-menu .update { 
  display: none;
}

.scrambled-menu:hover .update { 
  display: inline-block;
  color: rgba(180, 80, 176, 0.85);
  /* color: #B450B0;
  opacity: 85%; */
}

/*==============================
  RESPONSIVE DESIGN: TABLET
  ---
  > I'll keep the tablet breakpoint for now. 
  > I may change container widths later on. 
  > But the overall structure would be mostly constant through all devices.
  > Original mobile breakpoint was: (max-width: 576px)
  ---
  Could also add an animation to the scrambled menu if you have time. for example:
  - @keyframes scramble
  - animation: scramble 0.3s;
  - transform: translate(-50%, -50%) rotate(20deg);
==============================
@media screen and (max-width: 992px) {

.container {
  width: 80%;
}

.grid-container {
  width: 90%;
  margin: auto; -auto margin will centre the content-
  margin: 1vh 2vh 2vh 2vh;
} 
}*/

/*==============================
  RESPONSIVE DESIGN: PHONE
==============================*/
@media screen and (max-width: 768px) {

  html {
    overflow-x: hidden;
    /* font-size: 13px; */
  }

  .container {
    /* width: 90%; */
    margin-top: 2vh;
  }

  .grid-container {
    padding-top: 3vh;
    /* margin: auto; */
    grid-template-columns: 1fr;    
    grid-template-areas: 
      "text-area";
  }

  .text {
    width: 90%;
    margin: 0 auto;
    border-bottom: none;
    z-index: 0;
  }

  .branding {
    display: none;
  }

  .scrambled-menu .update { 
    display: inline-block;
  }
  
  .scrambled-menu .original { 
    display: none; 
  } 

  .responsive-menu {
    width: 100%;
    /* width: 85%; */
    height: auto;
    display: flex;
    justify-content:space-between;
    padding-left: 7.5%;
    border-bottom: 1px solid lightgray;
    margin: 0 auto;
    padding-bottom: 1.5vh;
    /* padding-bottom: 2vh; */
    align-items: center;
    /* CROSS POSITIONING:  */
    z-index: 2;
    position: relative;
  }

  .responsive-logo {
    padding-right: 15%;
  }

  .responsive-menu img {
    height: 5vh;
  }

  .burger div {
    width: 25px;
    height: 3px;
    background-color: lightgray;
    /* background-color: #F3F2EE; */
    border: 1px solid gray;
    margin: 3px;
    transition: all 0.3s ease-in;
  }

/*==============================
    RESPONSIVE MOBILE/BURGER
  ==============================*/
  .menu {
    position: fixed;
    right: 0px;
    top: 0;
    height: 80%;
    /* height: 100%; */
    background-color: #F3F2EE;
    /* background-color: #B450B0; */
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100%;
    transform: translateX(100%);
    transition: transform 0.5s ease-in;
    /* opacity: 0.95; */
    writing-mode: horizontal-tb;
    font-size: 1.75rem;
    z-index: 1;
    /* padding: 2% 0 5vh 0; */
  }

  .menu a {
    color: rgba(124, 124, 129, 1);
  }

  #active-page {
    border-bottom: 1px solid rgba(180, 80, 176, 1);
    padding-bottom: 1px;
  }

  .menu-blnc-elements {
    display: none;
  }

  .nav-active {
    transform: translateX(0%);
  }

  .toggle .line1 {
    transform: rotate(-45deg) translate(-5px, 6px);
    background-color: lightgray;
    /* background-color: #fff9e5; */
  }

  .toggle .line2 {
    opacity: 0;
  }

  .toggle .line3 {
    transform: rotate(45deg) translate(-5px, -6px);
    background-color: lightgray;
    /* background-color: #fff9e5; */
  }
}


/*
==============================
  RESPONSIVE DESIGN: PHONE 
  - This is version 2 of responsive part of contact.css page. 
  - This code uses grid-area to lay things out instead of seperating the responsive menu from the main desktop site (in the html). 
  - Make sure to comment out "responsive menu" section in html of contact page. 
  - The other options works and passes the elegance test though. So will use that. (There's no 100% "right" way in coding.)
==============================
@media (max-width: 768px) {
  
  .container {
    width: 100%;
  }
  
  .grid-container {
    grid-template-columns: 1fr;
    grid-template-rows: minmax(100px, auto);
    grid-template-rows: 1fr 9fr;
    grid-template-areas: 
      "menu-area (hide this area)"
      "branding-area"
      "text-area";
  }

  .menu {
    display: none;
  }

  .text {
    width: 90%;
    margin: 0 auto;
  }

  .branding {
    display: flex;
  }

  .branding img {
    width: auto;
    height: 7vh;
  }

  .gradient-text {
    display: none;
  }
}
*/

